[tool.poetry]
name = "trustpoint-devid-module"
version = "0.1.0"
description = ""
authors = ["AlexHx8472 <alex_mail@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
cryptography = "^43.0.0"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
